cmake_minimum_required(VERSION 3.12)
project(SocketsDemo)
set(CMAKE_CXX_STANDARD 20)
set(COMPILE_DEFINITIONS -O2 -Wall)
add_executable(tcp_server src/tcp_server.cpp)
add_executable(tcp_client src/tcp_client.cpp)
add_executable(udp_receive src/udp_receive.cpp)
add_executable(udp_transmit src/udp_transmit.cpp)
add_executable(http_client src/http_client.cpp)
target_link_libraries(http_client curl)
